Css works now! Comic sans fails to render on mobile so trying to fix that.

--- a/static/pinkstyle.css
+++ b/static/pinkstyle.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Comic Sans MS';
+  src: url("comic-sans-ms/comici.ttf");
+}
+
 body {
 	font-family: "Comic Sans MS", "Comic Sans", cursive;
 	background: #fff0f6 ;
